feat(camera): Add OV2640 camera driver with PSRAM support
- Implemented OV2640_Camera.h for real hardware control, supporting PSRAM for image buffering.
- Added initialization, photo capture, and power management functionalities.
- Included JPEG data validation and error handling during capture.
- Introduced a legacy OV2640_Camera_OLD.h for reference.
- Removed unused AudioSensor.h to streamline codebase.
- Enhanced NoiseAlarmPayload structure to include sound level metrics.
- Created README_PSRAM_TEST.md for PSRAM validation testing procedures.
- Added test_psram_simple.cpp for quick PSRAM functionality checks.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,28 +1,58 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32-s3-pole-monitor]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
-board_build.partitions = huge_app.csv
+
+; --- 核心硬件配置 (针对 N8R2) ---
+; 1. 声明 Flash 大小为 8MB
+board_upload.flash_size = 8MB
+; 2. 关键！声明内存模式为 QSPI (适配 2MB PSRAM)
+; 如果不加这行，PSRAM 即使开启了也无法使用，或者会导致无限重启
+board_build.arduino.memory_type = qio_qspi
+
+; --- 分区表 ---
+; 建议改用 8MB 分区表，比 huge_app.csv 能利用更多空间
+; 同时也支持 OTA 和大文件系统
+board_build.partitions = default_8MB.csv
+
+; --- 编译宏定义 ---
 build_flags = 
-	-DBOARD_HAS_PSRAM
-	-mfix-esp32-psram-cache-issue
-	-DCORE_DEBUG_LEVEL=3
-	-DCONFIG_ARDUHAL_LOG_COLORS=1
+    -DBOARD_HAS_PSRAM               ; 告诉代码开启 PSRAM 支持
+    -mfix-esp32-psram-cache-issue   ; 修复 PSRAM 缓存硬件缺陷
+    -DCORE_DEBUG_LEVEL=3            ; 开启 Info 级别的调试日志
+    -DCONFIG_ARDUHAL_LOG_COLORS=1   ; 彩色日志
+
+; --- 依赖库 (保持不变) ---
 lib_deps = 
-	mikalhart/TinyGPSPlus @ ^1.0.3
-	knolleary/PubSubClient @ ^2.8
-	https://github.com/sparkfun/SparkFun_LSM6DS3_Arduino_Library.git
-	espressif/esp32-camera @ ^2.0.0
-	bblanchon/ArduinoJson@^6.21.0
-	
+    mikalhart/TinyGPSPlus @ ^1.0.3
+    knolleary/PubSubClient @ ^2.8
+    https://github.com/sparkfun/SparkFun_LSM6DS3_Arduino_Library.git
+    espressif/esp32-camera @ ^2.0.0
+    bblanchon/ArduinoJson@^6.21.0
+
+; ========================================
+; PSRAM 验证测试环境
+; ========================================
+
+[env:test-psram]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+; 硬件配置（与主环境相同）
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+board_build.partitions = default_8MB.csv
+
+; 启用 PSRAM 和详细日志
+build_flags = 
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+    -DCORE_DEBUG_LEVEL=4            ; Verbose 日志便于查看测试结果
+
+; 只编译 PSRAM 测试文件
+build_src_filter = 
+    -<*>                            ; 排除所有源文件
+    +<../test/test_psram_simple.cpp> ; 只包含 PSRAM 测试
