Add unit tests for GPS, LSM6DS3, OV2640 modules and PSRAM validation
- Implement real and mock testing functions for GPS module including serial communication, NMEA data reception, GPS data parsing, and power control.
- Create unit tests for LSM6DS3 sensor focusing on I2C communication, sensor initialization, angle calculations, and sampling stability.
- Develop OV2640 camera module tests covering XCLK generation, camera initialization, photo capture, and PSRAM buffer validation.
- Introduce a simplified PSRAM validation test for ESP32-S3 to check memory allocation and data integrity.
- Update Wokwi configuration for testing PSRAM functionality.

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,8 +32,132 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.0
 
 ; ========================================
-; PSRAM 验证测试环境
+; 测试环境配置
+; 说明：通过 -DUSE_MOCK_HARDWARE=1/0 控制 Mock/Real 模式
 ; ========================================
+
+[env:test-battery]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1  ; 1=Mock模式(Wokwi), 0=Real模式(真实硬件)
+
+build_src_filter = 
+    -<*>
+    +<../test/test_battery/>
+
+[env:test-lsm6ds3]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1
+
+build_src_filter = 
+    -<*>
+    +<../test/test_lsm6ds3/>
+
+lib_ignore = Unity
+
+lib_deps = 
+    https://github.com/sparkfun/SparkFun_LSM6DS3_Arduino_Library.git
+
+[env:test-ov2640]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1
+
+build_src_filter = 
+    -<*>
+    +<../test/test_ov2640/>
+
+lib_ignore = Unity
+
+lib_deps = 
+    espressif/esp32-camera @ ^2.0.0
+
+[env:test-ec800k]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1
+
+build_src_filter = 
+    -<*>
+    +<../test/test_ec800k/>
+
+lib_ignore = Unity
+
+[env:test-gps]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1
+
+build_src_filter = 
+    -<*>
+    +<../test/test_gps/>
+
+lib_ignore = Unity
+
+lib_deps = 
+    mikalhart/TinyGPSPlus @ ^1.0.3
+
+[env:test-audio]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1
+
+build_src_filter = 
+    -<*>
+    +<../test/test_audio/>
+
+lib_ignore = Unity
 
 [env:test-psram]
 platform = espressif32
@@ -41,18 +165,17 @@ board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 
-; 硬件配置（与主环境相同）
 board_upload.flash_size = 8MB
 board_build.arduino.memory_type = qio_qspi
-board_build.partitions = default_8MB.csv
 
-; 启用 PSRAM 和详细日志
 build_flags = 
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
-    -DCORE_DEBUG_LEVEL=4            ; Verbose 日志便于查看测试结果
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=1
 
-; 只编译 PSRAM 测试文件
 build_src_filter = 
-    -<*>                            ; 排除所有源文件
-    +<../test/test_psram_simple.cpp> ; 只包含 PSRAM 测试
+    -<*>
+    +<../test/test_psram/>
+
+lib_ignore = Unity
