feat(api): Add device API documentation for Newland IoT Cloud Platform
fix(config): Set USE_MOCK_HARDWARE to 0 and enable deep sleep mode

refactor(pinmap): Rename I2C pins for clarity and consistency

ci(platformio): Add cppcheck configuration for static code analysis

fix(factory): Change destroy method parameter to reference for null assignment

fix(main): Update deep sleep duration to HEARTBEAT_INTERVAL_SEC

fix(ec800k): Use reinterpret_cast for pointer conversions in HTTP methods

fix(lsm6ds3): Change writeRegister to return success status

fix(ov2640): Improve camera initialization sequence and add stability checks

fix(datapayload): Explicitly mark NoiseAlarmPayload constructor

test(lsm6ds3): Update I2C initialization to use new pin definitions

test(ov2640): Enhance camera initialization test with detailed steps and checks

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,19 @@
+[env]
+check_tool = cppcheck
+check_skip_packages = yes
+check_src_filters =
+    +<src/>
+    +<include/>
+    -<.pio/>
+check_flags =
+    cppcheck: -i.pio/libdeps
+    cppcheck: -i.pio/packages
+    cppcheck: --suppress=*:*\.pio/libdeps/*
+    cppcheck: --suppress=*:*\.pio/packages/*
+    cppcheck: --suppress=unusedFunction:*src/main.cpp
+    cppcheck: --suppress=unusedPrivateFunction:*ATGM336H_Driver.h
+    cppcheck: --suppress=knownConditionTrueFalse:*LSM6DS3_Sensor.h
+
 [env:esp32-s3-pole-monitor]
 platform = espressif32
 board = esp32-s3-devkitc-1
