--- a/platformio.ini
+++ b/platformio.ini
@@ -1,19 +1,3 @@
-[env]
-check_tool = cppcheck
-check_skip_packages = yes
-check_src_filters =
-    +<src/>
-    +<include/>
-    -<.pio/>
-check_flags =
-    cppcheck: -i.pio/libdeps
-    cppcheck: -i.pio/packages
-    cppcheck: --suppress=*:*\.pio/libdeps/*
-    cppcheck: --suppress=*:*\.pio/packages/*
-    cppcheck: --suppress=unusedFunction:*src/main.cpp
-    cppcheck: --suppress=unusedPrivateFunction:*ATGM336H_Driver.h
-    cppcheck: --suppress=knownConditionTrueFalse:*LSM6DS3_Sensor.h
-
 [env:esp32-s3-pole-monitor]
 platform = espressif32
 board = esp32-s3-devkitc-1
@@ -38,6 +22,11 @@ build_flags =
     -mfix-esp32-psram-cache-issue   ; 修复 PSRAM 缓存硬件缺陷
     -DCORE_DEBUG_LEVEL=3            ; 开启 Info 级别的调试日志
     -DCONFIG_ARDUHAL_LOG_COLORS=1   ; 彩色日志
+
+; --- 源码过滤 (排除 project-name 防止冲突) ---
+build_src_filter = 
+    +<*>
+    -<../project-name/>
 
 ; --- 依赖库 (保持不变) ---
 lib_deps = 
