--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@ monitor_speed = 115200
 board_upload.flash_size = 8MB
 ; 2. 关键！声明内存模式为 QSPI (适配 2MB PSRAM)
 ; 如果不加这行，PSRAM 即使开启了也无法使用，或者会导致无限重启
-board_build.arduino.memory_type = qio_qspi
+board_build.arduino.memory_type = dio_qspi
 
 ; --- 分区表 ---
 ; 建议改用 8MB 分区表，比 huge_app.csv 能利用更多空间
