--- a/platformio.ini
+++ b/platformio.ini
@@ -134,7 +134,25 @@ board_build.arduino.memory_type = qio_qspi
 
 build_flags = 
     -DCORE_DEBUG_LEVEL=4
-    -DUSE_MOCK_HARDWARE=1
+
+build_src_filter = 
+    -<*>
+    +<../test/test_gps/test_gps_raw.cpp>
+
+lib_ignore = Unity
+
+[env:test-gps-tinygps]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+
+board_upload.flash_size = 8MB
+board_build.arduino.memory_type = qio_qspi
+
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DUSE_MOCK_HARDWARE=0
 
 build_src_filter = 
     -<*>
