--- a/platformio.ini
+++ b/platformio.ini
@@ -190,14 +190,16 @@ board_upload.flash_size = 8MB
 board_build.arduino.memory_type = qio_qspi
 
 build_flags = 
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
     -DCORE_DEBUG_LEVEL=4
-    -DUSE_MOCK_HARDWARE=1
 
 build_src_filter = 
     -<*>
-    +<../test/test_audio/>
+    +<../test/test_audio/test_audio_debug.cpp>
 
-lib_ignore = Unity
+lib_deps = 
+    espressif/esp32-camera @ ^2.0.0
 
 [env:test-psram]
 platform = espressif32
